--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,47 +1,42 @@
+[tool.poetry]
+name = "llm_automated_exam_evaluation"
+version = "0.1.0"
+description = "A fork of an AWS project for automatically generating exams to evaluate RAG pipelines"
+authors = ["Your Name <gabe@sonosim.com>"]
+license = "Apache 2.0"
+
+[tool.poetry.dependencies]
+python = ">=3.8"
+numpy = "*"
+boto3 = "*"
+datasets = "*"
+nltk = "*"
+tqdm = "*"
+markdownify = "*"
+pydantic = "*"
+torch = "*"
+sentence-transformers = "*"
+tenacity = "*"
+
+[tool.poetry.dev-dependencies]
+black = {version = "*", allow-prereleases = true}
+isort = "*"
+mypy = "*"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.black]
 line-length = 100
 
 [tool.isort]
 known_first_party = ["llm_automated_exam_evaluation"]
-
-# required for compatibility with black:
 profile = "black"
-
-# To maintain consistency with other settings
 line_length = 100
 
 [tool.mypy]
-# See https://mypy.readthedocs.io/en/latest/config_file.html for more mypy options.
-
-# Enables the type-checker on the interior of functions without type annotations.
 check_untyped_defs = true
-
-# Displaying specific error codes makes it easier to silence specific errors
-# See also https://mypy.readthedocs.io/en/latest/error_codes.html
 show_error_codes = true
-
-# Show source code snippets and location markers in error messages
 pretty = true
-
-# Suppresses errors about packages which do not implement type-hint sharing.
-# See also https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
 ignore_missing_imports = true
-
-dependencies = [
-    "boto3",
-    "datasets",
-    "matplotlib",
-    "nltk",
-    "numpy",
-    "pandas",
-    "plotly",
-    "requests",
-    "scipy",
-    "sentence_transformers",
-    "scikit-learn",
-    "spacy",
-    "torch",
-    "tqdm",
-    "lm-harness",
-    "markdownify"
-]
