Fix StackExchange preprocessed output * the StackExchange preprocessor now outputs the data in the correct place

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,5 +15,12 @@
                 "StackExchange"
             ]
         },
+        {
+            "name": "Preprocessor: StackExchange",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "Data.StackExchange.preprocessor",
+            "cwd": "${workspaceFolder}/auto-rag-eval"
+        },
     ]
 }
